--- a/openscc/submission/templates/base_openscc.html
+++ b/openscc/submission/templates/base_openscc.html
@@ -11,18 +11,79 @@
         <title>Open Conference Control System</title>
       {% endblock %}
   </head>
-  <body>    
-    <header class="container-fluid" id="headerSystem">
-      {% block headerPage %}
-        <h1>Open Conference Control System</h1>
-      {% endblock %}
+  <body class="h-100">    
+    <header id="headerSystem">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            {% block brandImage %}
+            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+              <img src="{% static 'media/images/logo_openscc.png' %}" alt="Conference logo" class="logoHeader">    
+            </a>
+            {% endblock %}
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          {% block headerPage %}
+            <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'submission:confList' %}">Eventos</a>
+                </li>
+                  {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="javascript:;" role="button" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ user.username }}
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Minhas inscrições</a>
+                        <a class="dropdown-item" href="{% url 'submission:logout' %}">Logout</a>
+                      </div>
+                    </li>
+                  {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'submission:login' %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+                        </svg>
+                      </a>
+                    </li>
+                  {% endif %}                
+              </ul>
+            </div>
+          {% endblock %}
+        </div>
+      </nav>
     </header>    
     <main>
       {% block mainContent %}
       {% endblock %}
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </main>
+    
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="container">
+        <div class="row">
+          <p class="col-md-4 mb-0 text-body-secondary">
+            &copy; {% now "Y" %} <a href="http://www.fatecmarilia.edu.br">FATEC Marília</a>
+          </p>
 
+          {% block FooterbrandImage %}
+          <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          {% endblock %}
+      
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="{% url 'submission:confList' %}" class="nav-link px-2 text-body-secondary">Eventos</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 
 </html>
