Fixing minor issues

--- a/openscc/submission/templates/base_openscc.html
+++ b/openscc/submission/templates/base_openscc.html
@@ -37,7 +37,7 @@
                         {{ user.username }}
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Minhas inscrições</a>
+                        <a class="dropdown-item" href="{% url 'submission:perfil' %}">Minhas inscrições</a>
                         <a class="dropdown-item" href="{% url 'submission:logout' %}">Logout</a>
                       </div>
                     </li>
